# clipper-progs

./: .gitmodules  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
html/: Makefile.am  Makefile.in  cbuccaneer.html  chltofom.html  cmapcut.html  cnautilus.html  comit.html  cpirate.html  csequins.html  ctruncate.html  parrot.html
macros/: ax_pthread.m4  ccp4.m4  clipper.m4  fftw.m4  mmdb.m4  progs.m4
src/: Makefile.am  Makefile.in  README  alt_hkl_datatypes.h  best.cpp  caniso.cpp  ccontacts.cpp  ccp4-extras.cpp  ccp4-extras.h  cecalc.cpp  cextend.cpp  cfft.cpp  chltofom.cpp  cinvfft.cpp  clipper_test.cpp  cmapcoeff.cpp  cmapcut.cpp  cmaplocal.cpp  cmodeltoseq.cpp  cmtzjoin.cpp  cmtzsplit.cpp  cncsfrommodel.cpp  comit.cpp  convert2mtz.cpp  cpatterson.cpp  cphasecombine.cpp  cphasematch.cpp  cpsf_utils.h  csfcalc.cpp  csigmaa.cpp  csymmatch.cpp  ctruncate.cpp  ctruncate_analyse.cpp  ctruncate_analyse.h  ctruncate_moments.cpp  ctruncate_parity.cpp  ctruncate_truncate.cpp  ctruncate_truncate.h  ctruncate_twin.cpp  ctruncate_twin.h  (+9 more)
src/buccaneer/: Makefile.am  Makefile.in  buccaneer-build.cpp  buccaneer-build.h  buccaneer-correct.cpp  buccaneer-correct.h  buccaneer-filter.cpp  buccaneer-filter.h  buccaneer-find.cpp  buccaneer-find.h  buccaneer-grow.cpp  buccaneer-grow.h  buccaneer-join.cpp  buccaneer-join.h  buccaneer-known.cpp  buccaneer-known.h  buccaneer-lib.cpp  buccaneer-lib.h  buccaneer-link.cpp  buccaneer-link.h  buccaneer-merge.cpp  buccaneer-merge.h  buccaneer-mr.cpp  buccaneer-mr.h  buccaneer-ncsbuild.cpp  buccaneer-ncsbuild.h  buccaneer-prep.cpp  buccaneer-prep.h  buccaneer-prot.cpp  buccaneer-prot.h  buccaneer-prune.cpp  buccaneer-prune.h  buccaneer-sequence.cpp  buccaneer-sequence.h  buccaneer-tidy.cpp  buccaneer-tidy.h  buccaneer-util.cpp  buccaneer-util.h  cbuccaneer-refmac-prune.cpp  cbuccaneer.cpp  (+2 more)
